tests/unit/compile/cases/syntax-errors/21.tag-broken.t
Lorem { { ipsum
---- THROW% ----
Unexpected "{"; expected: "'", '"', "%%", "}", "!", "(" or <name> near `{ ipsum` in `%s` at line 1
